2011-08-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_agents.php: fixed the fields as sql operations as field.
	
	Fixes: #3400237

2011-08-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_alerts.php: Fixed alerts_get_agents_with_alert_template
	function in order to not retrieve delete modules.

	Fixes: #3401666

2011-08-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/main.php: fixed when the file is corrupted or
	empty.
	
	Fixes: #3400237

2011-08-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions.php: fixed in function "string2image" when generate a
	image in other location, now have one more parameter, $homeurl, by default
	empty string.

2011-08-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/users/user_edit.php: Reload page to update skin.

2011-08-30 Koichiro Kikuchi <koichiro@rworks.jp>

	* include/functions_api.php: Fixed join parameter to avoid
	  generating unusable module lines.

2011-08-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/users/configure_user.php: Now action state is showed
	when update user action is performed.

2011-08-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/users/configure_user.php: Reload page to update skin.

2011-08-30  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/graphs/functions_fsgraph.php,
	include/graphs/fgraph.php: added the parameter $reduce_data_columns by
	default false for to use in vertical columns graph.

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php: Fixed URL injection replacing
	safe_input for safe_input_html

2011-08-30  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_standby_alerts.php: Added group recursion
	feature, it allows to search agents in child groups.
